Added images for all the restaurants.